--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,23 @@
 language: android
-dist: trusty
+
+android:
+  components:
+    - tools
+    - platform-tools
+    - tools
+
+    - build-tools-29.0.3
+    - android-29
+
+    - extra-google-m2repository
+    - extra-android-m2repository
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
+jdk:
+  - oraclejdk8
+
+script: 
+  - ./gradlew build
