--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
 
     - build-tools-29.0.3
     - android-29
-
+ - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
   licenses:
@@ -21,3 +21,4 @@ jdk:
 
 script: 
   - ./gradlew build
+- chmod +x ./gradlew
