--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ android:
 
     - build-tools-29.0.3
     - android-29
-    - extra-android-support
+
     - extra-google-m2repository
-   
-    licenses:
+    - extra-android-m2repository
+  licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
@@ -21,6 +21,3 @@ jdk:
 
 script: 
   - ./gradlew build
-  
-before_install:
-- chmod +x gradlew
